# ReCLAIM

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy  deploy_without_seed  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  turbo.json
backend/: .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_backend_schema.py  ontology_parse_properties.py  package.json  pyproject.toml
backend/backend/: main.py  topics.py
backend/backend/config/: __init__.py
backend/backend/db_crud/: input_sanitization.py  search.py
backend/backend/dependencies/: db.py
backend/backend/parsing/: utility.py
backend/backend/routers/: autocomplete.py  collection.py  cultural_asset.py  health.py  person.py
backend/backend/schema/: __init__.py  base_schema.py  extensions.py
backend/cypher/: createSimilarEntities.cql  seedSetup.cypher
backend/seed/: .gitignore  create_fulltext_indices.py  import_source.py  neo4j_interaction.py  run_etl_and_seed.py  seed_database.py  ttl_chunk_iterator.py
backend/seed/data/: namespaces.ttl
backend/test/: conftest.py  test_cultural_asset.py  test_health.py
backend/test/data/: test_seed.ttl
etl/: .gitignore  README.md  __init__.py  etl.py  package.json  pyproject.toml
etl/common/: __init__.py  authors.py  ccp_keywords.py  classification_and_material.py  dates.py  event.py  upload_images.ipynb
etl/common/event_extraction/: README.md  __init__.py  analyze_dataset.ipynb  cluster_embeddings.py  event_types.json  generate_embeddings.py  helpers.py  parse_event_types.py  syntax_validation.py  visualization.py
etl/err/: main.py
etl/err/preparation/: __init__.py  art_type.py  destination.py  html_links.py  images.py  parse_authors.py
etl/etltools/: __init__.py  cache.py  data.py  entity.py  helpers.py  image.py  record.py  uris.py
etl/linz/: main.py
etl/marburg/: __init__.py  main.py
etl/munich/: main.py
etl/sample/: main.py
etl/wiesbaden/: .gitignore  main.py
ontology/: build.py  ontology.py  package.json  pyproject.toml
ontology/pipeline/: combine.py  error.py
ontology/src/: base.ttl
ontology/taxonomies/: README.md  classification.ttl  material.ttl
scraper/: README.md  package.json  pyproject.toml  scraper.py
scraper/linz/: index.js  package-lock.json  package.json
scraper/munich_goering/: README.md  crawler.py  datapoint.py  goering.py  munich.py  munich_to_csv.ipynb  utils.py
(+194 files in other folders)
